--- a/styles/home.css
+++ b/styles/home.css
@@ -1,5 +1,5 @@
 /* add home page styles here */
-h1, p, ul {
+h1, h3, p, ul {
     margin: 5px;
 }
 
@@ -13,6 +13,18 @@ h1, p, ul {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.row-div {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.narrow-div {
+    width: auto;
+    margin: ;
 }
 
 ul {
