--- a/styles/home.css
+++ b/styles/home.css
@@ -3,6 +3,50 @@ h1, h3, p, ul {
     margin: 5px;
 }
 
+header {
+    background-color: white;
+}
+
+/*credit: https://stackoverflow.com/questions/20100296/endless-animated-css-tilted-gradient-background */
+#bg-wrapper {
+    position:fixed;
+    left:0;
+    top:var(--header-height);
+    right:0;
+    bottom:0;
+    overflow: visible;
+    z-index:-1;
+}
+
+#bg {
+    position:absolute;
+    left:0;
+    top:0;
+    width:100%;
+    height:100%;
+    padding:0;
+    margin:0;
+    border-radius: 50%;
+    background: linear-gradient(45deg, rgb(214, 70, 70), rgb(189, 60, 189), rgb(0, 183, 255), rgb(70, 223, 70), yellow, orange);
+    animation: spin 5s linear infinite;
+    -moz-animation: spin 5s linear infinite;
+    -webkit-animation: spin 5s linear infinite;
+    -ms-animation: spin 5s linear infinite;
+}
+
+@keyframes spin {
+    from { transform: scale3d(2,2,1) rotateZ(0deg);  }
+    to { transform: scale3d(2,2,1) rotateZ(360deg); }
+}
+
+.main-section {
+    border: 1px solid grey;
+    background-image: linear-gradient(rgba(255, 255, 255, .6), rgba(255, 255, 255, .8), rgba(255, 255, 255, .8), rgba(255, 255, 255, .6));
+    padding: 10px;
+    box-shadow: 10px 10px 10px rgba(50, 50, 50, 0.5);
+    border-radius: 10px;
+}
+
 .some-white-space {
     margin: 10px;
     padding: 10px;
